# sparrow-cam

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md
.claude/agents/: e2e.md  update-docs.md  verify.md
.claude/skills/implement-feature/: SKILL.md
.claude/skills/plan-feature/: SKILL.md
.claude/skills/task/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: checks.yml
agent_docs/: ai.md  archive_api.md  infra.md  lab.md  lab_package.md  processor.md  processor_package.md  rtmp_server.md  running_tests.md  stream.md  web.md  web_server.md
app/: index.html  nginx-rtmp.conf  nginx-rtmp.service  nginx-web.conf  nginx.conf
app/archive_api/: pyproject.toml
app/archive_api/archive_api/: __main__.py  app.py  archive.py  meta.py  models.py  utils.py
app/archive_api/tests/: conftest.py  test_archive.py  test_meta.py  test_utils.py
app/lab/: pyproject.toml
app/lab/lab/: __main__.py  annotations.py  constants.py  converter.py  evaluation.py  exception.py  fine_tune.py  gui.py  sync.py  utils.py
app/lab/tests/: conftest.py  test_annotations.py  test_converter.py  test_evaluation.py  test_fine_tune.py  test_sync.py  test_utils.py
app/processor/: .gitignore  pyproject.toml  setup.py
app/processor/bird_detector_lab/: README.md  converter.py
app/processor/lab/: __main__.py  constants.py  converter.py  gui.py  sync.py  utils.py
app/processor/processor/: __main__.py  app.py  bird_annotator.py  bird_detector.py  constants.py  detection_preset.json  hls_segment_processor.py  hls_watchtower.py  stream_archiver.py  types.py  utils.py
app/processor/processor/models/yolo26n_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
app/processor/processor/scripts/: README.md  export_ncnn.py  meta.py
app/processor/tests/: conftest.py  test_app.py  test_bird_annotator.py  test_bird_detector.py  test_hls_segment_processor.py  test_hls_watchtower.py  test_stream_archiver.py  test_utils.py
app/processor/tests/data/: playlist.m3u8
app/processor/tests/test_lab/: test_converter.py  test_gui.py  test_sync.py  test_utils.py
app/processor/tests/test_scripts/: test_export_ncnn.py  test_meta.py
app/stream/: stream.conf  stream.sh
app/web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
deploy/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
deploy/ansible/: archive_stream.yml  clean.yml  inventory.yml  mount.yml  processor.yml  rtmp.yml  users.yml  web.yml
infra/: .gitignore  Makefile  README.md  docker-compose.yml
infra/ansible/: ansible.cfg  archive.yml  setup_archive_api.yml  setup_logs.yml  setup_processor.yml  setup_storage.yml  setup_stream.yml  setup_users.yml  setup_web.yml
local/: Dockerfile  Dockerfile.archive_api  Dockerfile.lab  Dockerfile.nginx  Dockerfile.processor  Dockerfile.rtmp  Dockerfile.web  Makefile  README.md  docker-compose.lab.yml  docker-compose.yml  e2e-test.sh  nginx.conf  render-template.py  requirements.dev.txt  supervisord.conf
poc/: Dockerfile.processor  Dockerfile.stream  Dockerfile.web  README.md  docker-compose.yaml  index.html  nginx.conf  processor.py
tests/: Makefile  README.md  e2e-test.sh
(+36 files in other folders)
