[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "paramiko",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lab*"]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["lab", "tests"]
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "TID"]

[tool.ruff.lint.isort]
known-first-party = ["lab"]

[tool.black]
line-length = 120
target-version = ["py311"]
include = "\\.pyi?$"

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
include = ["lab", "tests"]
extraPaths = ["."]
executionEnvironments = [
    { root = "." },
]

[tool.coverage.run]
source = ["lab"]
branch = true
omit = ["*/__main__.py", "*/gui.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90
